# Data-Structures

./: CMakeLists.txt
include/: singlelist.h
src/: CMakeLists.txt  doublylinkedlist.h  main.cpp  node.cpp  node.h  node2.cpp  node2.h  singlelinkedlist.cpp  singlelinkedlist.h  stack.h
test/: CMakeLists.txt  main.cpp
test/doublyList/: CMakeLists.txt  tester_doublylist.cpp
test/singleList/: CMakeLists.txt  tester_singlelist.cpp
test/stack/: CMakeLists.txt  tester_stack.cpp
